<resources>
    <string name="app_name">eGFR Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="gender_type">Gender</string>
    <string name="age">Age</string>
    <string name="creatinine">Creatinine</string>
    <string name="race">Race</string>
    <string name="result">Result</string>
    <string name="egfr">eGFR</string>
    <string name="ckd_stage">CKD stage</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="race_other">Other</string>
    <string name="race_african">African American</string>
    <string name="result_pending">Result will appear here</string>
</resources>
